--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <button class="btn-twitter">Twitter</button>
     <button class="btn-facebook">Facebook</button>
-    <button class="btn-lindkedin">LinkedIn</button>
+    <button class="btn-linkedin">LinkedIn</button>
     <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
