--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <button class="btn-twitter">Twitter</button>
     <button class="btn-facebook">Facebook</button>
     <button class="btn-linkedin">LinkedIn</button>
+    <button class="btn-print">Print</button>
     <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
